- changin file structure to com.gib