@@ -6,11 +6,11 @@
 
   <groupId>groupId</groupId>
   <artifactId>Ts3Bot</artifactId>
-  <version>3.0-Beta</version>
+  <version>3.0.1</version>
 
   <properties>
-    <maven.compiler.source>16</maven.compiler.source>
-    <maven.compiler.target>16</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <encoding>UTF-8</encoding>
     <sshj.version>0.35.0</sshj.version>
@@ -30,7 +30,6 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.10</version>
     </dependency>
-
     <dependency>
       <groupId>com.github.theholywaffle</groupId>
       <artifactId>teamspeak3-api</artifactId>
@@ -53,7 +52,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>Main</mainClass>
+              <mainClass>com.gib.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -90,10 +89,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
         <configuration>
-          <source>21</source>
-          <target>21</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
